<resources>
    <string name="app_name">SuveraApp</string>

    <string name="title_activity_main">Suvera</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string-array name="interval_array">
        <item>Everyday</item>
        <item>On specific days</item>
    </string-array>

    <string name="overview">Drug schedule overview</string>
    <string name="hintDrug">eg. Advagraf 0.5mg</string>
    <string name="newMed">Let\'s add a new medication.</string>
    <string name="often">How often do you need it?</string>
    <string name="hintNext">Next stage</string>
    <string name="whyDrug">Why do you take this drug?</string>
    <string name="hintReason">eg. My back hurts</string>
    <string name="days">Which days do you need it?</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <string name="dosage">Dosage:</string>
    <string name="sched">What\'s your schedule for it in a given day?</string>
    <string name="time">Time:</string>
    <string name="hintDosage">Enter dosage</string>
    <string name="hintSave">Save drug</string>
    <string name="hintAdd">Add new alarm schedule</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="settings">Settings</string>
    <string name="suvera">Suvera</string>
    <string name="help">Help</string>
    <string name="welcome">Welcome</string>
    <string name="logout">Log out</string>
    <string name="hey">Hey</string>
    <string name="welc">Welcome Back, </string>
    <string name="newDrug">"Lets add a new reminder first!"</string>

    <string name="mMeds">Here are your <b>morning</b> meds:</string>
    <string name="aMeds">Here are your <b>afternoon</b> meds:</string>
    <string name="eMeds">Here are your <b>evening</b> meds:</string>
    <string name="lMeds">Here are your <b>late night</b> meds:</string>

    <string name="itSun">It\'s Sunday, today.</string>
    <string name="itMon">It\'s Monday, today.</string>
    <string name="itTue">It\'s Tuesday, today.</string>
    <string name="itWed">It\'s Wednesday, today.</string>
    <string name="itThu">It\'s Thursday, today.</string>
    <string name="itFri">It\'s Friday, today.</string>
    <string name="itSat">It\'s Saturday, today.</string>
    <string name="contact">contact@suvera.co.uk</string>
    <string name="drug">Drug</string>
    <string name="meds">My Meds</string>


</resources>
