<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".onload.SelectSpecDays">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:text="@string/days"
    android:id="@+id/lblSelectDay"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="110dp"
    />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/monday"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_below="@+id/lblSelectDay"
        android:layout_centerHorizontal="true"
        android:text="@string/monday" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tuesday"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:checked="false"
        android:layout_below="@+id/monday"
        android:layout_centerHorizontal="true"
        android:text="@string/tuesday" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:id="@+id/wednesday"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:checked="false"
        android:layout_below="@+id/tuesday"
        android:text="@string/wednesday" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:id="@+id/thursday"
        android:layout_below="@+id/wednesday"
        android:layout_alignStart="@+id/wednesday"
        android:layout_alignEnd="@+id/wednesday"
        android:checked="false"
        android:text="@string/thursday" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:id="@+id/friday"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:checked="false"
        android:layout_below="@+id/thursday"
        android:text="@string/friday" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:id="@+id/saturday"
        android:checked="false"
        android:layout_below="@+id/friday"
        android:layout_alignStart="@+id/friday"
        android:layout_alignEnd="@+id/sunday"
        android:text="@string/saturday" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:id="@+id/sunday"
        android:layout_below="@+id/saturday"
        android:layout_alignStart="@+id/friday"
        android:layout_alignEnd="@+id/friday"
        android:checked="false"
        android:text="@string/sunday" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnConfirmDays"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/sunday"
        android:layout_alignEnd="@+id/sunday"
        android:contentDescription="@string/hintNext"
        android:background="@drawable/ic_navigate_next"
        />
</RelativeLayout>
