<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onload.AddReason">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/whyDrug"
        android:id="@+id/lblAddReasonTitle"
        android:layout_marginTop="110dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
         />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtDrugReason"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="40dp"
        android:hint="@string/hintReason"
        android:singleLine="true"
        android:selectAllOnFocus="true"
        android:layout_below="@+id/lblAddReasonTitle"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnConfirmReason"
        android:contentDescription="@string/hintNext"
        android:layout_centerVertical="true"
        android:layout_alignEnd="@+id/txtDrugReason"
        android:layout_marginTop="40dp"
        android:background="@drawable/ic_navigate_next"/>
</RelativeLayout>
